fix: issue color contrast ratio

--- a/public/plantNew.css
+++ b/public/plantNew.css
@@ -2,7 +2,7 @@
 
 form,
 .drop-zone {
-  --btn-bg-color: #56704a;
+  --btn-bg-color: #2c4c1c;
   margin-inline: auto;
   width: 60vh;
 }
@@ -56,7 +56,7 @@ button[type="submit"] {
 }
 
 .section-social svg {
-  fill: #56704a;
+  fill: #2c4c1c;
   width: 30px;
 }
 
@@ -82,8 +82,12 @@ button[type="submit"] {
   font-size: 1.25em;
   font-weight: 700;
   color: white;
-  background-color: darkgreen;
+  background-color: #2c4c1c;
   display: inline-block;
   border-radius: 0.5rem;
   padding: 1em;
+}
+
+.drop-zone-label svg {
+  fill: #fff;
 }
